# rm_radar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: field_2.pcd  field_2_1.pcd  field_2_2.pcd  video.avi
assets/clouds/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
assets/clouds/stream/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
cmake/: FindHikvision.cmake  FindLibSerial.cmake  FindLivox.cmake  FindTensorRT.cmake  RMRadarConfig.cmake.in
doc/: profile.ncu-rep  优化寄录.md  定位优化.md  聚类优化.md  识别优化.md  跟踪优化.md
doc/profile/: profile.ncu-rep
samples/: CMakeLists.txt  README.md  common.h  frame.h  main.cpp  sample.cpp  sample_detect.cpp  sample_detect_image.cpp  sample_detect_locate.cpp  sample_detect_track.cpp  sample_detect_video.cpp  sample_radar.h
src/: CMakeLists.txt  detection.h  frame.h  radar.h  robot.h  utils.h
src/detect/: CMakeLists.txt  common.h  detection.h  detector.cpp  detector.cu  detector.h  logger.h  preparam.h  tensor.h  trt_logger.h
src/driver/: CMakeLists.txt
src/driver/camera/: base.h  camera.h  hik.cpp  hik.h
src/driver/camera/hik/: hik.cpp  hik.h
src/driver/camera/uvc/: uvc.cpp  uvc.h
src/driver/lidar/: lidar.h
src/driver/lidar/livox/: livox.cpp  livox.h
src/driver/serial/: serial.cpp  serial.h
src/locate/: CMakeLists.txt  cluster.h  locate.cpp  locator.h
src/protocol/: referee_system.h  sentry.h
src/robot/: CMakeLists.txt  robot.cpp  robot.h
src/task/: CMakeLists.txt
src/task/comm/: CMakeLists.txt  crc.h  referee.cpp  referee.h
src/task/rdlt/: CMakeLists.txt  README.md
src/task/rdlt/detect/: CMakeLists.txt  detector.cpp  detector.cu  detector.h  trt_logger.h
src/task/rdlt/locate/: CMakeLists.txt  locate.cpp  locator.h
src/task/rdlt/track/: CMakeLists.txt  track.h  tracker.cpp  tracker.h
src/track/: CMakeLists.txt  README.md  auction.h  data_type.h  features.h  hungarian.cpp  hungarian.h  kalman_filter.cpp  kalman_filter.h  linear_assignment.cpp  linear_assignment.h  matrix.h  munkres.cpp  munkres.h  nn_matching.cpp  nn_matching.h  singer.h  track.cpp  track.h  tracker.cpp  tracker.h
test/: CMakeLists.txt
test/comm/: CMakeLists.txt  crc_test.cpp  encode_test.cpp
test/detect/: CMakeLists.txt  detect_test.cu  detector_test.cpp  kernel_test.cu
test/locate/: CMakeLists.txt  cluster_test.cpp  locate_test.cpp  locator_test.cpp
test/profile/: CMakeLists.txt  ncu_test.cu  vtune_test.cpp
test/track/: CMakeLists.txt  auction_test.cpp  ekf_test.cpp  features_test.cpp  kf_test.cpp  singer_test.cpp
test/utils/: CMakeLists.txt  util_test.cpp
